{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 16,
  "lineage": "2fc96f02-ab6a-445e-7d64-fd6ef9ce9c3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "LOIC-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00be49d5992e04a2b",
            "domain": "vpc",
            "id": "eipalloc-00be49d5992e04a2b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-233-80-54.compute-1.amazonaws.com",
            "public_ip": "3.233.80.54",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "LOIC-INSTANCE-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:973087308139:instance/i-0f0592028203d085b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f0592028203d085b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "loic",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cfed00d0912aa7ad",
            "private_dns": "ip-10-0-2-116.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00c5604181a2de1c3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08aa8532e60b23368",
            "tags": {
              "Name": "LOIC-INSTANCE-PRIVATE"
            },
            "tags_all": {
              "Name": "LOIC-INSTANCE-PRIVATE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e4448f2756ac0abd"
            ]
          },
          "dependencies": [
            "aws_security_group.LOIC-SG-PRIVATE",
            "aws_security_group.LOIC-SG-PUBLIC",
            "aws_subnet.LOIC-SUBNET-PRIVATE",
            "aws_vpc.LOIC-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "LOIC-INSTANCE-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:973087308139:instance/i-0b002822696c9cbb1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b002822696c9cbb1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "loic",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0efcc42b704cc7f26",
            "private_dns": "ip-10-0-1-197.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.197",
            "public_ip": "35.173.204.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-022099fcae4c5403b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03051ae551842c084",
            "tags": {
              "Name": "LOIC-INSTANCE-PUBLIC"
            },
            "tags_all": {
              "Name": "LOIC-INSTANCE-PUBLIC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c45fbdffbdd3a7a8"
            ]
          },
          "dependencies": [
            "aws_security_group.LOIC-SG-PUBLIC",
            "aws_subnet.LOIC-SUBNET-PUBLIC",
            "aws_vpc.LOIC-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "LOIC-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:internet-gateway/igw-0808188f7380b86ec",
            "id": "igw-0808188f7380b86ec",
            "owner_id": "973087308139",
            "tags": {
              "Name": "LOIC-IGW"
            },
            "tags_all": {
              "Name": "LOIC-IGW"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "LOIC-NATGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00be49d5992e04a2b",
            "association_id": "eipassoc-0ec8034e0569b2945",
            "connectivity_type": "public",
            "id": "nat-0accfaf8fe363da3f",
            "network_interface_id": "eni-0ee704d1578eb0f5b",
            "private_ip": "10.0.1.237",
            "public_ip": "3.233.80.54",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03051ae551842c084",
            "tags": {
              "Name": "LOIC-NATGW"
            },
            "tags_all": {
              "Name": "LOIC-NATGW"
            }
          },
          "dependencies": [
            "aws_eip.LOIC-EIP",
            "aws_subnet.LOIC-SUBNET-PUBLIC",
            "aws_vpc.LOIC-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "LOIC-RTB-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:route-table/rtb-0b76a91ebd60dbe59",
            "id": "rtb-0b76a91ebd60dbe59",
            "owner_id": "973087308139",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0accfaf8fe363da3f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "LOIC.RTB-PRIVATE"
            },
            "tags_all": {
              "Name": "LOIC.RTB-PRIVATE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1f74aabc7619878"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.LOIC-EIP",
            "aws_nat_gateway.LOIC-NATGW",
            "aws_subnet.LOIC-SUBNET-PUBLIC",
            "aws_vpc.LOIC-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "LOIC-RTB-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:route-table/rtb-06810812764c35deb",
            "id": "rtb-06810812764c35deb",
            "owner_id": "973087308139",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0808188f7380b86ec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "LOIC-RTB-PUBLIC"
            },
            "tags_all": {
              "Name": "LOIC-RTB-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1f74aabc7619878"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.LOIC-IGW",
            "aws_vpc.LOIC-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "LOIC-RTB-PRIVATE-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d3e8b440d1c0726",
            "route_table_id": "rtb-0b76a91ebd60dbe59",
            "subnet_id": "subnet-08aa8532e60b23368"
          },
          "dependencies": [
            "aws_eip.LOIC-EIP",
            "aws_nat_gateway.LOIC-NATGW",
            "aws_route_table.LOIC-RTB-PRIVATE",
            "aws_subnet.LOIC-SUBNET-PRIVATE",
            "aws_subnet.LOIC-SUBNET-PUBLIC",
            "aws_vpc.LOIC-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "LOIC-RTB-PUBLIC-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6eaed5f7dbf455d",
            "route_table_id": "rtb-06810812764c35deb",
            "subnet_id": "subnet-03051ae551842c084"
          },
          "dependencies": [
            "aws_internet_gateway.LOIC-IGW",
            "aws_route_table.LOIC-RTB-PUBLIC",
            "aws_subnet.LOIC-SUBNET-PUBLIC",
            "aws_vpc.LOIC-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LOIC-SG-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:security-group/sg-0e4448f2756ac0abd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4448f2756ac0abd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c45fbdffbdd3a7a8"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230922100102920700000003",
            "name_prefix": "terraform-",
            "owner_id": "973087308139",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LOIC-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "LOIC-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1f74aabc7619878"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.LOIC-SG-PUBLIC",
            "aws_vpc.LOIC-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LOIC-SG-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:security-group/sg-0c45fbdffbdd3a7a8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c45fbdffbdd3a7a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230922100059474700000001",
            "name_prefix": "terraform-",
            "owner_id": "973087308139",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LOIC-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "LOIC-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1f74aabc7619878"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.LOIC-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "LOIC-SUBNET-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:subnet/subnet-08aa8532e60b23368",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08aa8532e60b23368",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "973087308139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LOIC-SUBNET-PRIVATE"
            },
            "tags_all": {
              "Name": "LOIC-SUBNET-PRIVATE"
            },
            "vpc_id": "vpc-0f1f74aabc7619878"
          },
          "dependencies": [
            "aws_vpc.LOIC-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "LOIC-SUBNET-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:subnet/subnet-03051ae551842c084",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03051ae551842c084",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "973087308139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LOIC-SUBNET-PUBLIC"
            },
            "tags_all": {
              "Name": "LOIC-SUBNET-PUBLIC"
            },
            "vpc_id": "vpc-0f1f74aabc7619878"
          },
          "dependencies": [
            "aws_vpc.LOIC-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "LOIC-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973087308139:vpc/vpc-0f1f74aabc7619878",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d4d761c0b66b2d8d",
            "default_route_table_id": "rtb-0e3982a3de0a237c6",
            "default_security_group_id": "sg-021d7e4715fe31eb3",
            "dhcp_options_id": "dopt-01e49b8eb85ce9ca9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f1f74aabc7619878",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e3982a3de0a237c6",
            "owner_id": "973087308139",
            "tags": {
              "Name": "LOIC-VPC"
            },
            "tags_all": {
              "Name": "LOIC-VPC"
            }
          }
        }
      ]
    }
  ]
}